# c-template-struct

./: CMakeLists.txt  README.md
code/: c_template_struct.h
code/app/: main.c
code/dummy/: dummy.c  dummy.h
